[gd_scene load_steps=11 format=3 uid="uid://dbe4inq0kgh0l"]

[ext_resource type="Script" uid="uid://tqnec61f5w3u" path="res://Scripts/xp_gem.gd" id="1_cvj5t"]
[ext_resource type="Texture2D" uid="uid://kqeg1giqxg0y" path="res://Icons/gem.png" id="2_tf1b7"]
[ext_resource type="AudioStream" uid="uid://csvmwsriuoa0i" path="res://Assets/FX/xp-sound.mp3" id="3_tf1b7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6l4po"]
atlas = ExtResource("2_tf1b7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvvx0"]
atlas = ExtResource("2_tf1b7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g3vq"]
atlas = ExtResource("2_tf1b7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_asvrm"]
atlas = ExtResource("2_tf1b7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo3at"]
atlas = ExtResource("2_tf1b7")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_asvrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l4po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvvx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g3vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asvrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo3at")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_n2em3"]
radius = 24.020824

[node name="XpGem" type="Area2D"]
collision_mask = 8
script = ExtResource("1_cvj5t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
scale = Vector2(4.875, 4.875)
sprite_frames = SubResource("SpriteFrames_asvrm")
autoplay = "default"
frame_progress = 0.40014547

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -9)
shape = SubResource("CircleShape2D_n2em3")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tf1b7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.502

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
